{
    "name": "GameControls",
    "maps": [
        {
            "name": "Player",
            "id": "13cfd93d-2348-4bda-9d09-b61b198b40a7",
            "actions": [
                {
                    "name": "ContinueDialogue",
                    "type": "Button",
                    "id": "5298b537-0eab-4476-be23-15327efedb7d",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1f1ff094-dccd-4435-a6d1-81d3ca72df1b",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ContinueDialogue",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}